--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -27,7 +27,8 @@
   }
 
   .slider {
-    height: 350px;
+    //height: 350px;
+    height: 450px;
     display: flex;
     position: absolute;
     left: 0;
@@ -47,6 +48,7 @@
 
       .item {
         width: 700px;
+        //width: 800px;
         height: 100%;
         background-color: white;
         border-radius: 20px;
@@ -69,7 +71,7 @@
 
           .leftContainer {
             width: 90%;
-            height: 70%;
+            height: 80%;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
@@ -99,13 +101,13 @@
             h2 {
               font-size: 20px;
 
-              @include mobile{
+              @include mobile {
                 font-size: 13px;
               }
             }
             p {
               font-size: 13px;
-              @include mobile{
+              @include mobile {
                 display: none;
               }
             }
@@ -126,8 +128,8 @@
           overflow: hidden;
 
           img {
-            width: 400px;
-            transform: rotate(-10deg);
+            width: 500px;
+            //transform: rotate(-10deg);
           }
         }
       }
