change bg color

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -17,7 +17,7 @@
       width: 700px;
       height: 700px;
       background-color: crimson;
-      background-color: transparent;
+      // background-color: transparent;
       border-radius: 50%;
       display: flex;
       align-items: flex-end;
